--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
   <head>
     <meta charset="utf-8">
     <title>React Chat App</title>
+    <link rel="icon" type="image/png" sizes="16x16" href="/public/assets/img/redux.ico">
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.12/semantic.min.css"></link>
   </head>
   <body>
     <div id="app"></div>
-    <script src="/public/bundle.js"></script>
   </body>
 </html>
